Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67988

Popups created with parent which is not topmost with xdg-shell-v6

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.10.1, 5.11.0
    • QPA: Wayland
    • None
    • xdg-shell v6

      This is most easily reproduced on any [wlroots|https://github.com/swaywm/wlroots]-based compositor, which is strict about protocol errors.

      [2173170.435] wl_display@1.error(zxdg_shell_v6@20, 2, "xdg_popup was not created on the topmost popup")
      zxdg_shell_v6@20: error 2: xdg_popup was not created on the topmost popup
      The Wayland connection experienced a fatal error (Protocol error)

       

      This is a regression originally fixed by https://bugreports.qt.io/browse/QTBUG-56990

        For Gerrit Dashboard: QTBUG-67988
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            sir_cmpwn Drew DeVault
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes