xdg-shell v6: Make sure popup parent is topmost popup when grabbing

Avoids protocol errors on Weston, gnome-shell and wlroots-based
compositors.

[ChangeLog][QPA Plugin] Fixed a protocol error that sometimes happened
when showing popups such as nested menus on xdg-shell unstable v6.

Task-number: QTBUG-67988
Change-Id: I037aec94fba3d177dd0392e5a216a604bc65ac4f
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>